# SecureGraph-AI-Repository-Security-Auditor-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: auth_agent.py  file_analyzer.py  secrets_agent.py  security_agent.py
cli/: commands.py
graph/: workflow.py
prompts/: auth_prompt.py  classifier_prompt.py  secrets_prompt.py  security_prompt.py
reports/: report_generator.py
scanner/: file_scanner.py
