[project]
name = "securegraph"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
securegraph = "cli.commands:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "graph*", "agents*", "prompts*", "reports*", "scanner*"]